working on chat widget

--- a/extensions/chat-widget/blocks/chat-widget.liquid
+++ b/extensions/chat-widget/blocks/chat-widget.liquid
@@ -8,7 +8,7 @@
   id="flux-chat-widget"
   data-store-name="{{ shop.name }}"
   data-theme="{{ block.settings.theme }}"
-  data-api-url="{{ app.api_url }}/api/chat"
+  data-api-url="/apps/flux-chat/api/proxy"
   style="z-index: 999999 !important; position: relative !important;"
 >
 </div>
